// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Widget /> should not render when the \`type\` prop is invalid 1`] = `
<Widget
  component={null}
  config={
    {
      "col": 1,
      "height": 6,
      "row": 1,
      "type": "some_widget",
      "width": 12,
    }
  }
/>
`;

exports[`<Widget /> should render an image widget 1`] = `
<Widget
  component={[Function]}
  config={
    {
      "col": 1,
      "height": 6,
      "row": 1,
      "type": "@shopgate/commerce-widgets/image",
      "width": 12,
    }
  }
>
  <GridItem
    className="common__widgets__widget tss-vz3anm-widgetCell"
    component="div"
    grow={0}
    shrink={1}
  >
    <div
      className="common__widgets__widget tss-de4d3x-root-widgetCell"
    >
      <div>
        <Suspense
          fallback={<Loading />}
        >
          <MyComponent
            ratio={
              [
                12,
                6,
              ]
            }
          >
            <div />
          </MyComponent>
        </Suspense>
      </div>
    </div>
  </GridItem>
</Widget>
`;

exports[`<Widget /> should render an image widget with offset 1`] = `
<Widget
  cellSize={100}
  component={[Function]}
  config={
    {
      "col": 1,
      "height": 6,
      "row": 1,
      "type": "@shopgate/commerce-widgets/image",
      "width": 6,
    }
  }
>
  <GridItem
    className="common__widgets__widget tss-1oqm3sh-widgetCell"
    component="div"
    grow={0}
    shrink={1}
  >
    <div
      className="common__widgets__widget tss-16reccf-root-widgetCell"
    >
      <div>
        <Suspense
          fallback={<Loading />}
        >
          <MyComponent
            ratio={
              [
                6,
                6,
              ]
            }
          >
            <div />
          </MyComponent>
        </Suspense>
      </div>
    </div>
  </GridItem>
</Widget>
`;
